# xpathlib

./: .codechecker.toml  .flake8  .gitignore  .lfrules.toml  .taplo.toml  LICENSE  README.md  __init__.py  eslint.config.mjs  io.py  logger.py  path.py  pyproject.toml  ssh.py  txio.py
src/: __init__.py  xpathlib.py
